# Cmark

./: .clang-format  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  build.bat  build.sh
buildtask/vscode/: launch.json  settings.json
cmake/: easyexif.cmake
resources/: resources.qrc
sources/executableLogo/: Cmark.rc
src/: CMakeLists.txt
src/Cmark/: CMakeLists.txt  CMark.h  TODO.hpp  main.cpp
src/Cmark/Base/: CPoint.h  CSize.h  ExifInfo.h  FixMap.hpp  ImagePack.h  LRUCache.hpp  Type.h  type.h
src/Cmark/CThread/: ThreadPool.cpp  ThreadPool.h  threadPool.cpp
src/Cmark/Core/: PictureManager.cpp  PictureManager.h
src/Cmark/File/: BatchImageProcess.cpp  BatchImageProcess.h  Consumer.cpp  Consumer.h  FileQueue.h  LogoManager.cpp  LogoManager.h  PictureManager.cpp  PictureManager.h  Producer.cpp  Producer.h  ResourcesTool.h
src/Cmark/File/ImageProcess/: ImageProcess.cpp  ImageProcess.h
src/Cmark/File/Loader/: FileLoad.cpp  FileLoad.h  QExifImageHeader
src/Cmark/File/Resolver/: EXIFResolver.cpp  EXIFResolver.h  EasyExifResolver.cpp  EasyExifResolver.h  Resolver.h
src/Cmark/ImageProcess/: ImageProcess.cpp  ImageProcess.h
src/Cmark/Load/: EXIFResolver.cpp  EXIFResolver.h  FileLoad.cpp  FileLoad.h
src/Cmark/Loader/: EXIFResolver.cpp  EXIFResolver.h  EasyExifResolver.cpp  EasyExifResolver.h  FileLoad.cpp  FileLoad.h  QExifImageHeader  Resolver.h
src/Cmark/Log/: CLog.cpp  CLog.h
src/Cmark/Scene/: CScene.cpp  CScene.h  DisplayImageScene.cpp  DisplayImageScene.h  LifeSizeImageScene.cpp  LifeSizeImageScene.h  PreViewImageItem.cpp  PreViewImageItem.h  PreViewImageScene.cpp  PreViewImageScene.h  SceneDef.h  SceneLayout.cpp  SceneLayout.h
src/Cmark/UI/: DisplayWidget.cpp  DisplayWidget.h  FileTreeDockWidget.h  ImagePropertyDockWidget.cpp  ImagePropertyDockWidget.h  LeftDockWidget.cpp  LeftDockWidget.h  LogoManager.cpp  LogoManager.h  MainWindow.cpp  MainWindow.h  MarginLayout.cpp  MarginLayout.h  PreViewImageItem.cpp  PreViewImageItem.h  PreViewImageScene.cpp  PreViewImageScene.h  SceneLayout.cpp  SceneLayout.h  StatusBar.cpp  StatusBar.h
src/Cmark/Window/: DisplayWidget.cpp  DisplayWidget.h  FileTreeDockWidget.cpp  FileTreeDockWidget.h  ImagePropertyDockWidget.cpp  ImagePropertyDockWidget.h  LeftDockWidget.cpp  MainWindow.cpp  MainWindow.h  StatusBar.cpp  StatusBar.h
src/Cmark/sources/: LogoManager.cpp  LogoManager.h  PictureManager.cpp  PictureManager.h  ResourcesTool.h
src/Cmark/sources/executableLogo/: Cmark.aps
src/Cmark/sources/pictures/Appple/: IMG_8176.heic  IMG_9374.heic
src/test/: CMakeLists.txt  test.cpp
