CMAKE_MINIMUM_REQUIRED(VERSION 3.15)
SET(project_name CameraMark)

PROJECT(${project_name} LANGUAGES CXX)

SET(CMAKE_CXX_STANDARD 17)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)

SET(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake;${CMAKE_MODULE_PATH}")
INCLUDE(easyexif)

SET(third_party ${CMAKE_SOURCE_DIR}/src/vendor/)

FIND_PACKAGE(Qt5Widgets CONFIG REQUIRED)
FIND_PACKAGE(Qt5Gui CONFIG REQUIRED)

ADD_SUBDIRECTORY(src)
