CMAKE_MINIMUM_REQUIRED(VERSION 3.15)
SET(project_name CameraMark)

PROJECT(${project_name} LANGUAGES CXX)

SET(CMAKE_CXX_STANDARD 17)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)

SET(CMAKE_INCLUDE_CURRENT_DIR ON)

SET(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake;${CMAKE_MODULE_PATH}")

INCLUDE(easyexif)

SET(third_party ${CMAKE_SOURCE_DIR}/src/vendor/)

IF(WITH_TEST)
    enable_testing()
ENDIF(WITH_TEST)

ADD_SUBDIRECTORY(src)
