SET(target_ Cmark)

FILE(GLOB_RECURSE SOURCE_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp ${CMAKE_CURRENT_SOURCE_DIR}/*.h
        ${third_party}/easyexif/exif.cpp ${third_party}/easyexif/exif.h
)

SET(CMAKE_AUTOMOC ON)
SET(CMAKE_INCLUDE_CURRENT_DIR ON)

FIND_PACKAGE(Qt5Widgets CONFIG REQUIRED)
FIND_PACKAGE(Qt5Gui CONFIG REQUIRED)

ADD_EXECUTABLE(${target_} ${SOURCE_FILES})

TARGET_INCLUDE_DIRECTORIES(${target_} PRIVATE
        ${third_party}/easyexif
        ${CMAKE_CURRENT_SOURCE_DIR})

TARGET_LINK_LIBRARIES(${target_} PRIVATE Qt5::Widgets Qt5::Gui pthread)

SET(EXE_OUTPUT_DIR ${PROJECT_BINARY_DIR}/bin)

FILE(INSTALL ${CMAKE_CURRENT_SOURCE_DIR}/sources DESTINATION ${EXE_OUTPUT_DIR}/)
SET_TARGET_PROPERTIES(
        ${target_} PROPERTIES
        RUNTIME_OUTPUT_DIRECTORY "${EXE_OUTPUT_DIR}"
        # LIBRARY_OUTPUT_DIRECTORY "${PROJECT_BINARY_DIR}/bin"
        # ARCHIVE_OUTPUT_DIRECTORY "${PROJECT_BINARY_DIR}/lib"
)
